Created RawData, ModelData subdirs and associated csv. Created first release on data_prep, gnewsapi notebooks

--- a/gnewsapi.ipynb
+++ b/gnewsapi.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initial imports to get show started\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "import requests"
+    "import requests\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +24,7 @@
        "str"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,25 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'{\"datetime\":\"2021-01-12T04:50:03+00:00\",\"timestamp\":1610427003,\"countArticles\":8,\"articles\":[{\"article_url\":\"https:\\\\/\\\\/www.coindesk.com\\\\/bitcoin-price-1000-january-1-2017\",\"title\":\"Bitcoin Price Tops $1,000 in First Day of 2017 Trading - CoinDesk - CoinDesk\",\"description\":\"Bitcoin Price Tops $1,000 in First Day of 2017 Trading - CoinDesk  CoinDesk\",\"description_with_tag\":\"<a href=\\\\\"https:\\\\/\\\\/www.coindesk.com\\\\/bitcoin-price-1000-january-1-2017\\\\\" target=\\\\\"_blank\\\\\">Bitcoin Price Tops $1,000 in First Day of 2017 Trading - CoinDesk<\\\\/a>&nbsp;&nbsp;<font color=\\\\\"#6f6f6f\\\\\">CoinDesk<\\\\/font>\",\"published_datetime\":\"2017-01-01T08:00:00+00:00\",\"published_timestamp\":1483257600,\"image_url\":\"https:\\\\/\\\\/gnewsapi.net\\\\/redirect-news-image\\\\/68d7d3b472fe29d401ab8dd1acf922c0\",\"source_name\":\"CoinDesk\",\"source_url\":\"https:\\\\/\\\\/www.coindesk.com\",\"source_domain\":\"www.coindesk.com\"},{\"article_url\":\"https:\\\\/\\\\/cointelegraph.com\\\\/press-releases\\\\/remitano-p2p-bitcoin-exchange-is-completely-independent-from-traditional-banking-partners\",\"title\":\"Remitano P2P Bitcoin Exchange is Completely Independent from Traditional Banking Partners - CoinTelegraph\",\"description\":\"Remitano P2P Bitcoin Exchange is Completely Independent from Traditional Banking Partners  CoinTelegraph\",\"description_with_tag\":\"<a href=\\\\\"https:\\\\/\\\\/cointelegraph.com\\\\/press-releases\\\\/remitano-p2p-bitcoin-exchange-is-completely-independent-from-traditional-banking-partners\\\\\" target=\\\\\"_blank\\\\\">Remitano P2P Bitcoin Exchange is Completely Independent from Traditional Banking Partners<\\\\/a>&nbsp;&nbsp;<font color=\\\\\"#6f6f6f\\\\\">CoinTelegraph<\\\\/font>\",\"published_datetime\":\"2017-01-01T08:00:00+00:00\",\"published_timestamp\":1483257600,\"image_url\":\"https:\\\\/\\\\/gnewsapi.net\\\\/redirect-news-image\\\\/d0247831ca06a7a3d1e4b15b7f22868f\",\"source_name\":\"CoinTelegraph\",\"source_url\":\"https:\\\\/\\\\/cointelegraph.com\",\"source_domain\":\"cointelegraph.com\"},{\"article_url\":\"https:\\\\/\\\\/fortune.com\\\\/2017\\\\/01\\\\/01\\\\/french-right-to-disconnect-law\\\\/\",\"title\":\"New French Law Bars Work Email After Hours - Fortune\",\"description\":\"New French Law Bars Work Email After Hours  Fortune\",\"description_with_tag\":\"<a href=\\\\\"https:\\\\/\\\\/fortune.com\\\\/2017\\\\/01\\\\/01\\\\/french-right-to-disconnect-law\\\\/\\\\\" target=\\\\\"_blank\\\\\">New French Law Bars Work Email After Hours<\\\\/a>&nbsp;&nbsp;<font color=\\\\\"#6f6f6f\\\\\">Fortune<\\\\/font>\",\"published_datetime\":\"2017-01-01T08:00:00+00:00\",\"published_timestamp\":1483257600,\"image_url\":\"https:\\\\/\\\\/gnewsapi.net\\\\/redirect-news-image\\\\/5c07145a77bde5c19bb1f099d696d2fb\",\"source_name\":\"Fortune\",\"source_url\":\"https:\\\\/\\\\/fortune.com\",\"source_domain\":\"fortune.com\"},{\"article_url\":\"https:\\\\/\\\\/cointelegraph.com\\\\/news\\\\/podcast-dmitry-buterin-like-father-like-son\",\"title\":\"Podcast: Dmitry Buterin - Like Father, Like Son - CoinTelegraph\",\"description\":\"Podcast: Dmitry Buterin - Like Father, Like Son  CoinTelegraph\",\"description_with_tag\":\"<a href=\\\\\"https:\\\\/\\\\/cointelegraph.com\\\\/news\\\\/podcast-dmitry-buterin-like-father-like-son\\\\\" target=\\\\\"_blank\\\\\">Podcast: Dmitry Buterin - Like Father, Like Son<\\\\/a>&nbsp;&nbsp;<font color=\\\\\"#6f6f6f\\\\\">CoinTelegraph<\\\\/font>\",\"published_datetime\":\"2017-01-01T08:00:00+00:00\",\"published_timestamp\":1483257600,\"image_url\":\"https:\\\\/\\\\/gnewsapi.net\\\\/redirect-news-image\\\\/9bfff6d81a89cba83853176565dfd7e7\",\"source_name\":\"CoinTelegraph\",\"source_url\":\"https:\\\\/\\\\/cointelegraph.com\",\"source_domain\":\"cointelegraph.com\"},{\"article_url\":\"https:\\\\/\\\\/fortune.com\\\\/2017\\\\/01\\\\/01\\\\/trump-doesnt-trust-computers\\\\/\",\"title\":\"Trump Says he Doesn\\\\u2019t Trust Computers as he Rings in 2017 - Fortune\",\"description\":\"Trump Says he Doesn\\\\u2019t Trust Computers as he Rings in 2017  Fortune\",\"description_with_tag\":\"<a href=\\\\\"https:\\\\/\\\\/fortune.com\\\\/2017\\\\/01\\\\/01\\\\/trump-doesnt-trust-computers\\\\/\\\\\" target=\\\\\"_blank\\\\\">Trump Says he Doesn\\\\u2019t Trust Computers as he Rings in 2017<\\\\/a>&nbsp;&nbsp;<font color=\\\\\"#6f6f6f\\\\\">Fortune<\\\\/font>\",\"published_datetime\":\"2017-01-01T08:00:00+00:00\",\"published_timestamp\":1483257600,\"image_url\":\"https:\\\\/\\\\/gnewsapi.net\\\\/redirect-news-image\\\\/eb2c48861c50ad9f401544fd2c2382a8\",\"source_name\":\"Fortune\",\"source_url\":\"https:\\\\/\\\\/fortune.com\",\"source_domain\":\"fortune.com\"},{\"article_url\":\"https:\\\\/\\\\/fortune.com\\\\/2017\\\\/01\\\\/01\\\\/native-american-rights-dams\\\\/\",\"title\":\"Shielded Native American Sites Thrust into Debate Over Dams - Fortune\",\"description\":\"Shielded Native American Sites Thrust into Debate Over Dams  Fortune\",\"description_with_tag\":\"<a href=\\\\\"https:\\\\/\\\\/fortune.com\\\\/2017\\\\/01\\\\/01\\\\/native-american-rights-dams\\\\/\\\\\" target=\\\\\"_blank\\\\\">Shielded Native American Sites Thrust into Debate Over Dams<\\\\/a>&nbsp;&nbsp;<font color=\\\\\"#6f6f6f\\\\\">Fortune<\\\\/font>\",\"published_datetime\":\"2017-01-01T08:00:00+00:00\",\"published_timestamp\":1483257600,\"image_url\":\"https:\\\\/\\\\/gnewsapi.net\\\\/redirect-news-image\\\\/b2bdcb0832c2c3a4376d56cf8dd37c1d\",\"source_name\":\"Fortune\",\"source_url\":\"https:\\\\/\\\\/fortune.com\",\"source_domain\":\"fortune.com\"},{\"article_url\":\"https:\\\\/\\\\/finance.yahoo.com\\\\/news\\\\/blue-crush-cast-looked-peak-190736711.html\",\"title\":\"The \\\\u201cBlue Crush\\\\u201d cast looked PEAK 2000s at the movie premiere - Yahoo Finance\",\"description\":\"The \\\\u201cBlue Crush\\\\u201d cast looked PEAK 2000s at the movie premiere  Yahoo Finance\",\"description_with_tag\":\"<a href=\\\\\"https:\\\\/\\\\/finance.yahoo.com\\\\/news\\\\/blue-crush-cast-looked-peak-190736711.html\\\\\" target=\\\\\"_blank\\\\\">The \\\\u201cBlue Crush\\\\u201d cast looked PEAK 2000s at the movie premiere<\\\\/a>&nbsp;&nbsp;<font color=\\\\\"#6f6f6f\\\\\">Yahoo Finance<\\\\/font>\",\"published_datetime\":\"2017-01-01T08:00:00+00:00\",\"published_timestamp\":1483257600,\"image_url\":\"https:\\\\/\\\\/gnewsapi.net\\\\/redirect-news-image\\\\/e65dbaea3f3a318b403bf280848903fc\",\"source_name\":\"Yahoo Finance\",\"source_url\":\"https:\\\\/\\\\/finance.yahoo.com\",\"source_domain\":\"finance.yahoo.com\"},{\"article_url\":\"https:\\\\/\\\\/scroll.in\\\\/article\\\\/825314\\\\/bharati-bhavan-library-chowk-allahabad-a-poem-by-arvind-krishna-mehrotra\",\"title\":\"\\'Bharati Bhavan Library, Chowk, Allahabad\\': A poem by Arvind Krishna Mehrotra - Scroll.in\",\"description\":\"\\'Bharati Bhavan Library, Chowk, Allahabad\\': A poem by Arvind Krishna Mehrotra  Scroll.in\",\"description_with_tag\":\"<a href=\\\\\"https:\\\\/\\\\/scroll.in\\\\/article\\\\/825314\\\\/bharati-bhavan-library-chowk-allahabad-a-poem-by-arvind-krishna-mehrotra\\\\\" target=\\\\\"_blank\\\\\">\\'Bharati Bhavan Library, Chowk, Allahabad\\': A poem by Arvind Krishna Mehrotra<\\\\/a>&nbsp;&nbsp;<font color=\\\\\"#6f6f6f\\\\\">Scroll.in<\\\\/font>\",\"published_datetime\":\"2017-01-01T08:00:00+00:00\",\"published_timestamp\":1483257600,\"image_url\":\"https:\\\\/\\\\/gnewsapi.net\\\\/redirect-news-image\\\\/30d450b992b9de4539fc75ce3a817ce5\",\"source_name\":\"Scroll.in\",\"source_url\":\"https:\\\\/\\\\/scroll.in\",\"source_domain\":\"scroll.in\"}]}'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The GNews API url\n",
     "news_url = \"https://gnewsapi.net/api/search?\"\n",
     "\n",
-    "search_term = \"crypto OR btc OR bitcoin OR ethereum\"\n",
+    "search_term = \"crypto\"\n",
     "#search_country = \"us OR uk OR hk OR ch\" # cannot combine countries\n",
     "search_country = \"us\"\n",
     "search_language = \"en\"\n",
@@ -66,19 +56,87 @@
     "request_url = news_url+\"q=\"+search_term+\"&country=\"+search_country+\"&language=\"+search_language+\"&from=\"+search_start_date+\"&to=\"+search_end_date+\"&api_token=\"+api_key\n",
     "\n",
     "# Execute get request\n",
-    "payload = {}\n",
-    "headers= {}\n",
-    "response = requests.request(\"GET\", request_url, headers = headers, data = payload)\n",
+    "#payload = {}\n",
+    "#headers= {}\n",
+    "#response = requests.request(\"GET\", request_url, headers = headers, data = payload)\n",
+    "#response.content\n",
     "\n",
-    "response.content"
+    "# Execute get request\n",
+    "response = requests.get(request_url)\n",
+    "#response.content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"datetime\": \"2021-01-13T02:59:30+00:00\",\n",
+      "    \"timestamp\": 1610506770,\n",
+      "    \"countArticles\": 4,\n",
+      "    \"articles\": [\n",
+      "        {\n",
+      "            \"article_url\": \"https://www.coindesk.com/bitcoin-price-1000-january-1-2017\",\n",
+      "            \"title\": \"Bitcoin Price Tops $1,000 in First Day of 2017 Trading - CoinDesk - CoinDesk\",\n",
+      "            \"description\": \"Bitcoin Price Tops $1,000 in First Day of 2017 Trading - CoinDesk  CoinDesk\",\n",
+      "            \"description_with_tag\": \"<a href=\\\"https://www.coindesk.com/bitcoin-price-1000-january-1-2017\\\" target=\\\"_blank\\\">Bitcoin Price Tops $1,000 in First Day of 2017 Trading - CoinDesk</a>&nbsp;&nbsp;<font color=\\\"#6f6f6f\\\">CoinDesk</font>\",\n",
+      "            \"published_datetime\": \"2017-01-01T08:00:00+00:00\",\n",
+      "            \"published_timestamp\": 1483257600,\n",
+      "            \"image_url\": \"https://gnewsapi.net/redirect-news-image/68d7d3b472fe29d401ab8dd1acf922c0\",\n",
+      "            \"source_name\": \"CoinDesk\",\n",
+      "            \"source_url\": \"https://www.coindesk.com\",\n",
+      "            \"source_domain\": \"www.coindesk.com\"\n",
+      "        },\n",
+      "        {\n",
+      "            \"article_url\": \"https://finance.yahoo.com/news/blue-crush-cast-looked-peak-190736711.html\",\n",
+      "            \"title\": \"The \\u201cBlue Crush\\u201d cast looked PEAK 2000s at the movie premiere - Yahoo Finance\",\n",
+      "            \"description\": \"The \\u201cBlue Crush\\u201d cast looked PEAK 2000s at the movie premiere  Yahoo Finance\",\n",
+      "            \"description_with_tag\": \"<a href=\\\"https://finance.yahoo.com/news/blue-crush-cast-looked-peak-190736711.html\\\" target=\\\"_blank\\\">The \\u201cBlue Crush\\u201d cast looked PEAK 2000s at the movie premiere</a>&nbsp;&nbsp;<font color=\\\"#6f6f6f\\\">Yahoo Finance</font>\",\n",
+      "            \"published_datetime\": \"2017-01-01T08:00:00+00:00\",\n",
+      "            \"published_timestamp\": 1483257600,\n",
+      "            \"image_url\": \"https://gnewsapi.net/redirect-news-image/e65dbaea3f3a318b403bf280848903fc\",\n",
+      "            \"source_name\": \"Yahoo Finance\",\n",
+      "            \"source_url\": \"https://finance.yahoo.com\",\n",
+      "            \"source_domain\": \"finance.yahoo.com\"\n",
+      "        },\n",
+      "        {\n",
+      "            \"article_url\": \"https://cointelegraph.com/news/podcast-dmitry-buterin-like-father-like-son\",\n",
+      "            \"title\": \"Podcast: Dmitry Buterin - Like Father, Like Son - CoinTelegraph\",\n",
+      "            \"description\": \"Podcast: Dmitry Buterin - Like Father, Like Son  CoinTelegraph\",\n",
+      "            \"description_with_tag\": \"<a href=\\\"https://cointelegraph.com/news/podcast-dmitry-buterin-like-father-like-son\\\" target=\\\"_blank\\\">Podcast: Dmitry Buterin - Like Father, Like Son</a>&nbsp;&nbsp;<font color=\\\"#6f6f6f\\\">CoinTelegraph</font>\",\n",
+      "            \"published_datetime\": \"2017-01-01T08:00:00+00:00\",\n",
+      "            \"published_timestamp\": 1483257600,\n",
+      "            \"image_url\": \"https://gnewsapi.net/redirect-news-image/9bfff6d81a89cba83853176565dfd7e7\",\n",
+      "            \"source_name\": \"CoinTelegraph\",\n",
+      "            \"source_url\": \"https://cointelegraph.com\",\n",
+      "            \"source_domain\": \"cointelegraph.com\"\n",
+      "        },\n",
+      "        {\n",
+      "            \"article_url\": \"https://www.finews.asia/finance/23666-legal-hong-kong-harneys-new-partners\",\n",
+      "            \"title\": \"New Asian Partners at Harneys - finews.asia\",\n",
+      "            \"description\": \"New Asian Partners at Harneys  finews.asia\",\n",
+      "            \"description_with_tag\": \"<a href=\\\"https://www.finews.asia/finance/23666-legal-hong-kong-harneys-new-partners\\\" target=\\\"_blank\\\">New Asian Partners at Harneys</a>&nbsp;&nbsp;<font color=\\\"#6f6f6f\\\">finews.asia</font>\",\n",
+      "            \"published_datetime\": \"2017-01-02T08:00:00+00:00\",\n",
+      "            \"published_timestamp\": 1483344000,\n",
+      "            \"image_url\": \"https://gnewsapi.net/redirect-news-image/e86c177c79ebbb1c87eb6113ce4479f2\",\n",
+      "            \"source_name\": \"finews.asia\",\n",
+      "            \"source_url\": \"https://www.finews.asia\",\n",
+      "            \"source_domain\": \"www.finews.asia\"\n",
+      "        }\n",
+      "    ]\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "json_response = response.json()\n",
+    "print(json.dumps(json_response,indent=4))"
+   ]
   },
   {
    "cell_type": "code",
