--- a/Volatility_forecast.ipynb
+++ b/Volatility_forecast.ipynb
@@ -1275,9 +1275,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pyvizenv]",
+   "display_name": "dev",
    "language": "python",
-   "name": "conda-env-pyvizenv-py"
+   "name": "dev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1289,7 +1289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
