Housekeeping from other branch, organizing RawData, ModelData. Created .gitignore. Created first pass of LSTM RNN in predict_model notebook. Removed LSTM RNN notebook not needed.

--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -115,11 +115,9 @@
    ],
    "source": [
     "# Read in BTC historical hourly price data \n",
-    "# *data downloaded from CryptoDataDownload with Date column natively in NY EST zone\n",
     "\n",
-    "#btc_df = pd.read_csv(Path('./RawData/BTCUSD_historical_data_1hr.csv'),parse_dates=True,index_col='Date')\n",
+    "# data downloaded from CryptoDataDownload with Date column natively in NY EST zone\n",
     "btc_df = pd.read_csv(Path('./RawData/gemini_BTCUSD_1hr.csv'),parse_dates=['Date'])\n",
-    "#btc_df = pd.read_csv(Path('./RawData/gemini_BTCUSD_1hr.csv'),parse_dates=True,infer_datetime_format=True)\n",
     "btc_df.tail(3)"
    ]
   },
@@ -1433,7 +1431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
