--- a/LSTM RNN.ipynb
+++ b/LSTM RNN.ipynb
@@ -2300,9 +2300,9 @@
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "dev",
+   "display_name": "Python [conda env:tensor]",
    "language": "python",
-   "name": "dev"
+   "name": "conda-env-tensor-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2314,7 +2314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.9"
   },
   "mimetype": "text/x-python",
   "name": "python",
